# OreoHouse

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  release-please-config.json
.github/workflows/: build-server-image.yml  build-web-image.yml  build-windows-app.yml  release-please.yml
assets/: prep_brand.py
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  ChatWindowApp.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: chat.json  default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: Avatar.tsx  ConvActionsMenu.tsx  EmojiPicker.tsx  MediaLinksPanel.tsx  PreferencesModal.tsx  ProfileModal.tsx  SearchModal.tsx  SlashHelpModal.tsx
client/src/lib/: api.ts  chatBridge.ts  drafts.ts  emoji.ts  mutedConvs.ts  session.ts  slashCommands.ts  sounds.ts  tauri.ts  theme.ts  updater.ts  users.ts  ws.ts
client/src/types/: proto.ts
deploy/: portainer-stack.yml
docs/: protocol.md
docs/decisions/: 0001-initial-stack.md  0002-admin-ui-vanilla-html.md  0005-php-web-client.md
server/: go.mod  go.sum  migrations.go
server/cmd/oreohouse/: main.go
server/internal/admin/: admin.go  admin_test.go
server/internal/api/: admin.go  admin_test.go  auth.go  auth_test.go  conversations.go  conversations_test.go  files.go  files_test.go  middleware.go  profile.go  profile_test.go  search.go
server/internal/attachments/: attachments.go  attachments_test.go
server/internal/auth/: auth.go  auth_test.go
server/internal/conversations/: conversations.go  conversations_test.go
server/internal/db/: db.go  db_test.go
server/internal/messages/: links.go  messages.go  messages_test.go  pins.go  reactions.go  reactions_test.go  reads.go  reads_test.go
server/migrations/: 0001_users_and_sessions.sql  0002_users_last_seen_at.sql  0003_conversations_messages.sql  0004_conversations_topic.sql  0005_attachments.sql  0006_users_status_text.sql  0007_users_is_admin.sql  0008_conversation_read_states.sql  0009_users_display_name_and_avatar.sql  0010_message_reactions.sql  0011_messages_edited_deleted.sql  0012_messages_fts.sql  0013_conversation_pins.sql  0014_sessions_client_version.sql
tools/invert-image/: go.mod  main.go
web/: Dockerfile  README.md
web/public/: .htaccess  chat.php  index.php  logout.php  manifest.webmanifest  sw.js
web/src/: api.php  config.php  session.php
(+22 files in other folders)
