[package]
name = "oreohouse"
version = "0.12.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oreohouse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon enables the system tray API used in lib.rs.
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# Auto-update (Phase 10 polish): checks an Ed25519-signed manifest on
# launch and offers an in-app install. tauri-plugin-process exposes
# `relaunch()` which the client calls after a successful install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

